force-app/main/default/objects/Real_Estate_Contract__c/Real_Estate_Contract__c.object-meta.xml
<CustomObject>
    <description>Hold contracts regarding real estate. Can be rental or sales</description>
    <label>Vastgoed Contract</label>
    <nameField>
        <displayFormat>CTR-{00000000}</displayFormat>
        <label>Real Estate Contract Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vastgoed Contracten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>