force-app/main/default/objects/Real_Estate_Contract__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Coupling a bank account to the contract to determine which from which bank account the contract will be paid.</description>
    <inlineHelpText>What bank account will be used for this contract?</inlineHelpText>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipName>Real_Estate_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>