force-app/main/default/objects/Real_Estate_Contract__c/fields/Contract_Party__c.field-meta.xml
<CustomField>
    <fullName>Contract_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main contract party (owner)</description>
    <label>Contract Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Real_Estate_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>