force-app/main/default/objects/Real_Estate_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the contract</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>