force-app/main/default/objects/Real_Estate_Contract__c/fields/Gross_Rent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rent__c</fullName>
    <description>Monthly gross rent, may consist of multiple different components</description>
    <label>Gross Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>