force-app/main/default/objects/Real_Estate_Contract__c/fields/Parent_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Number__c</fullName>
    <description>Key for the record in Wocas</description>
    <externalId>true</externalId>
    <label>Parent Contract Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>