force-app/main/default/objects/Real_Estate_Contract__c/recordTypes/Rental.recordType-meta.xml
<RecordType>
    <fullName>Rental</fullName>
    <active>true</active>
    <description>Rental contracts</description>
    <label>Rental</label>
</RecordType>