force-app/main/default/objects/Real_Estate_Contract__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>Sales contract</description>
    <label>Sales</label>
</RecordType>