force-app/main/default/objects/Real_Estate_Contract__c/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Party__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Bank_Account__c</columns>
    <columns>Parent_Contract_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Bovenliggende Contracten</label>
</ListView>